# service/api/api_login.go
@@ -17,29 +17,34 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 	var user User
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
-		//		jsonResp, _ := json.Marshal(ApiResponse{
-		//			Code:    http.StatusBadRequest,
-		//			Message: "Error decoding JSON",
-		//		})
+		jsonResp, _ := json.Marshal(ApiResponse{
+			Code:    http.StatusBadRequest,
+			Message: "Error decoding JSON",
+		})
 		ctx.Logger.WithError(err).Error("user: error decoding JSON")
 		w.WriteHeader(http.StatusBadRequest)
-		//		w.Write(jsonResp)
+		w.Write(jsonResp)
 		return
-	} else if !user.Valid() {
-		//		jsonResp, _ := json.Marshal(ApiResponse{
-		//			Code:    http.StatusBadRequest,
-		//			Message: "Error error validating JSON",
-		//		})
+	} else if !user.IsValid() {
+		jsonResp, _ := json.Marshal(ApiResponse{
+			Code:    http.StatusBadRequest,
+			Message: "Error validating JSON",
+		})
 		ctx.Logger.Error("user: error validating JSON")
 		w.WriteHeader(http.StatusBadRequest)
-		//		w.Write(jsonResp)
+		w.Write(jsonResp)
 		return
 	}
 
 	// Create user in the DB
 	dbuser, err := rt.db.CreateUser(user.ToDatabase())
 	if errors.Is(err, database.ErrUserExists) {
+		jsonResp, _ := json.Marshal(ApiResponse{
+			Code:    http.StatusConflict,
+			Message: "user: The user alredy exists",
+		})
 		w.WriteHeader(http.StatusConflict)
+		w.Write(jsonResp)
 		return
 	} else if err != nil {
 		ctx.Logger.WithError(err).Error("user: error creating user in DB")
